force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Initial_Closing_Disclosure_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Initial_Closing_Disclosure_Date__c</fullName>
    <description>Users populate this optional field to indicate the date for the initial closing disclosure. By default, this field is blank.</description>
    <inlineHelpText>Enter the date for the initial closing disclosure.</inlineHelpText>
    <label>Initial Closing Disclosure Date</label>
    <type>Date</type>
</CustomField>