force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Initial_Loan_Estimate_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Initial_Loan_Estimate_Date__c</fullName>
    <description>Users populate this optional field to indicate the date for the initial loan estimate. By default, this field is blank.</description>
    <inlineHelpText>Enter the date for the initial loan estimate.</inlineHelpText>
    <label>Initial Loan Estimate Date</label>
    <type>Date</type>
</CustomField>