force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Intent_to_Proceed_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Intent_to_Proceed_Date__c</fullName>
    <description>Users populate this optional date field to indicate the date the applicant provides their intent to proceed. This date occurs after loan estimate disclosure and indicates intent to proceed with the application. By default, this field is blank.</description>
    <inlineHelpText>Enter the date the applicant indicated intent to proceed with the application.</inlineHelpText>
    <label>Intent to Proceed Date</label>
    <type>Date</type>
</CustomField>