force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Is_Manually_Edited__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Manually_Edited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user manually selects this optional checkbox field to indicate that manual edits have been made to the loan compliance record on the Loan Compliance route. By default, it is deselected.</description>
    <inlineHelpText>This field indicates if a user has manually edited the loan compliance record. When selected, the system does not automatically populate fields on the loan compliance record with values entered in the workflow.</inlineHelpText>
    <label>Is Manually Edited</label>
    <type>Checkbox</type>
</CustomField>