force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Is_Used_for_Home_Improvement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Used_for_Home_Improvement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional checkbox field to indicate that the loan proceeds will
        be used for home improvement. By default, this field is deselected.</description>
    <inlineHelpText>Select this checkbox to indicate that loan proceeds will be used for home
        improvement.</inlineHelpText>
    <label>Is Used for Home Improvement</label>
    <type>Checkbox</type>
</CustomField>