force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Purpose_of_Refinance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Purpose_of_Refinance__c</fullName>
    <description>Users populate this optional picklist field to indicate the purpose of a refinance
        loan. By default, this field is blank.</description>
    <inlineHelpText>Select the purpose of the refinance loan.</inlineHelpText>
    <label>Purpose of Refinance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Refinance_with_current_lender_and_cash-out</fullName>
                <label>Refinance with current lender and cash-out</label>
            </value>
            <value>
                <fullName>Refinance_with_current_lender_and_limited_cash-out</fullName>
                <label>Refinance with current lender and limited cash-out</label>
            </value>
            <value>
                <fullName>Refinance_with_current_lender_and_no_cash-out</fullName>
                <label>Refinance with current lender and no cash-out</label>
            </value>
            <value>
                <fullName>Refinance_with_different_lender_and_cash-out</fullName>
                <label>Refinance with different lender and cash-out</label>
            </value>
            <value>
                <fullName>Refinance_with_different_lender_and_limited_cash-out</fullName>
                <label>Refinance with different lender and limited cash-out</label>
            </value>
            <value>
                <fullName>Refinance_with_different_lender_and_no_cash-out</fullName>
                <label>Refinance with different lender and no cash-out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>