force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Qualified_Mortgage_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Qualified_Mortgage_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User selects this checkbox to indicate that a loan qualifies as a Qualified Mortgage. By default, this field is deselected.</description>
    <inlineHelpText>This field indicates if a loan qualifies as Qualified Mortgage.</inlineHelpText>
    <label>Qualified Mortgage Indicator</label>
    <type>Checkbox</type>
</CustomField>