force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Rate_Lock_Expiration_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate_Lock_Expiration_Date_and_Time__c</fullName>
    <description>Users populate this optional field to indicate the expiration date and time of the rate lock. By default, this field is blank.</description>
    <inlineHelpText>Enter the date and time the rate lock expires.</inlineHelpText>
    <label>Rate Lock Expiration Date and Time</label>
    <type>DateTime</type>
</CustomField>