force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Redisclosure_Reasons__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Redisclosure_Reasons__c</fullName>
    <description>The system automatically populates this optional multi-select picklist to indicate the reason the loan may require redisclosure. By default, the picklist value is null.</description>
    <inlineHelpText>This system-populated multi-select picklist indicates the reason the loan may require redisclosure.</inlineHelpText>
    <label>Redisclosure Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rate Lock</fullName>
            </value>
            <value>
                <fullName>Tolerance Violation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>