force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Total_Points_And_Fees__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Points_And_Fees__c</fullName>
    <description>The system automatically populates this field to indicate the total points and fees for a loan. By default, this field is blank.</description>
    <inlineHelpText>This field indicates the total points and fees for a loan.</inlineHelpText>
    <label>Total Points and Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>