force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__TRID_Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__TRID_Loan_Purpose__c</fullName>
    <description>Users populate this optional picklist field to indicate the TRID loan purpose. By default, this field is blank.</description>
    <inlineHelpText>Select the TRID Loan Purpose.</inlineHelpText>
    <label>TRID Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Home Equity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>