force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__TRID_Tolerances_Exceeded_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__TRID_Tolerances_Exceeded_Date__c</fullName>
    <description>The system automatically populates this optional date field to indicate the date the fees associated with the loan exceeded TRID tolerances. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field displays the date the fees exceeded TRID tolerances.</inlineHelpText>
    <label>TRID Tolerances Exceeded Date</label>
    <type>Date</type>
</CustomField>