force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__TRID_Unacceptable_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__TRID_Unacceptable_Change_Date__c</fullName>
    <description>The system populates this optional date field to indicate the date that an unacceptable change of circumstance occurred for a TRID loan. By default, this field is blank.</description>
    <inlineHelpText>Captures the date that an unacceptable change of circumstance occurred for a TRID loan.</inlineHelpText>
    <label>Unacceptable Change Date</label>
    <type>Date</type>
</CustomField>